--- a/ModIgnore/MockOverseer/MainWindow.xaml
+++ b/ModIgnore/MockOverseer/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MockOverseer.MainWindow"
+﻿<Window x:Class="MockOverseer.MainWindow" x:Name="MyWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,6 +8,6 @@
         Title="MainWindow" Height="450" Width="800">
     <StackPanel>
         <TextBlock Name="ConnectedText" Text="Connected" Visibility="Hidden" FontSize="30" />
-        <TextBlock Name="LastMessageText" Text="LastMessage:" Visibility="Hidden" />
+        <TextBlock Name="LastMessageText" Text="No message received yet" Visibility="Hidden" />
     </StackPanel>
 </Window>
